--- a/DFFViewer2/App.xaml
+++ b/DFFViewer2/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="DFFViewer2.App"
+﻿<Application x:Class="Heavy.DFFViewer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Views/MainWindowView.xaml">
     <Application.Resources>
          
     </Application.Resources>
