--- a/DFFViewer2/MainWindow.xaml
+++ b/DFFViewer2/MainWindow.xaml
@@ -1,16 +1,20 @@
-﻿<Window x:Class="DFFViewer2.MainWindow"
+﻿<Window x:Class="Heavy.DFFViewer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525" xmlns:my="clr-namespace:DFFViewer2">
+        xmlns:vm="clr-namespace:Heavy.DFFViewer.ViewModels"
+        xmlns:v="clr-namespace:Heavy.DFFViewer.Views"
+        Title="MainWindow" Height="350" Width="525">
   <Window.CommandBindings>
     <CommandBinding Command="ApplicationCommands.Open" Executed="OpenCommandExecuted" CanExecute="CommandBinding_CanExecute" />
-  </Window.CommandBindings>
+  </Window.CommandBindings>  
   <StackPanel>
-    <Menu IsMainMenu="True">
+    <!--<Menu IsMainMenu="True">
       <MenuItem Header="_File">
         <MenuItem Command="ApplicationCommands.Open" />
       </MenuItem>
-    </Menu>
-    <my:ModelViewPort x:Name="modelViewPort" />
+    </Menu>-->
+    <!--<my:ModelViewPort x:Name="modelViewPort" />-->
+    <v:CameraView DataContext="{Binding CamViewModel}" />
+    <Button Click="Button_Click">TEST</Button>
   </StackPanel>
 </Window>
