--- a/DFFViewer2/ModelViewPort.xaml
+++ b/DFFViewer2/ModelViewPort.xaml
@@ -1,8 +1,7 @@
 ﻿<UserControl x:Class="Heavy.DFFViewer.ModelViewPort"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:my="clr-namespace:Heavy.DFFViewer">
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006">
   <Grid>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="Auto"/>
@@ -12,14 +11,12 @@
       <RowDefinition Height="*"/>
     </Grid.RowDefinitions>
 
-    <my:PerspectiveCameraSettings x:Name="cameraSettings" Grid.Column="0" Grid.Row="0" Width="150" Camera="{Binding PCamera}"/>
-    
-    <Viewport3D Grid.Column="1" Grid.Row="0" Camera="{Binding PCamera}">      
+    <!--<Viewport3D Grid.Column="1" Grid.Row="0" Camera="{Binding PCamera}">      
       <Viewport3D.Children>
         <ModelVisual3D Content="{Binding Light}" />
         <ModelVisual3D Content="{Binding ModelGroup}" />
       </Viewport3D.Children>
-    </Viewport3D>
+    </Viewport3D>-->
     
   </Grid>
 </UserControl>
