--- a/DFFViewer2/Views/Vector3DView.xaml
+++ b/DFFViewer2/Views/Vector3DView.xaml
@@ -1,9 +1,7 @@
-﻿<UserControl x:Class="Heavy.DFFViewer.Views.Point3DView"
+﻿<UserControl x:Class="Heavy.DFFViewer.Views.Vector3DView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:vm="clr-namespace:Heavy.DFFViewer.ViewModels"
-             xmlns:v="clr-namespace:Heavy.DFFViewer.Views">  
+             xmlns:v="clr-namespace:Heavy.DFFViewer.Views">
   <Grid>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="*"/>
