--- a/DFFViewer2/Views/CameraView.xaml
+++ b/DFFViewer2/Views/CameraView.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"             
-             xmlns:v="clr-namespace:Heavy.DFFViewer.Views">
+             xmlns:v="clr-namespace:Heavy.DFFViewer.Views" xmlns:viblendEditors="clr-namespace:VIBlend.WPF.Controls;assembly=VIBlend.WPF.Editors">
   <Grid>
     <Grid.RowDefinitions>
       <RowDefinition Height="Auto"/>
@@ -13,13 +13,13 @@
       <ColumnDefinition Width="Auto"/>
     </Grid.ColumnDefinitions>
     <HeaderedContentControl Grid.Column="0" Grid.Row="0" Header="Field of view" Margin="2">
-      <v:NumericUpDownView Value="{Binding Path=FieldOfView, Mode=TwoWay}"/>
+      <viblendEditors:SpinEditor Value="{Binding Path=FieldOfView, Mode=TwoWay}" />
     </HeaderedContentControl>
     <HeaderedContentControl Grid.Column="0" Grid.Row="1" Header="Position" Margin="2">
       <v:Point3DView DataContext="{Binding Position}" />
     </HeaderedContentControl>
     <HeaderedContentControl Grid.Column="0" Grid.Row="2" Header="Look direction" Margin="2">
       <v:Vector3DView DataContext="{Binding LookDirection}"/>
-    </HeaderedContentControl>
+    </HeaderedContentControl>    
   </Grid>
 </UserControl>
