--- a/DFFViewer2/Views/Vector3DView.xaml
+++ b/DFFViewer2/Views/Vector3DView.xaml
@@ -1,7 +1,8 @@
 ﻿<UserControl x:Class="Heavy.DFFViewer.Views.Vector3DView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:v="clr-namespace:Heavy.DFFViewer.Views">
+             xmlns:v="clr-namespace:Heavy.DFFViewer.Views" 
+             xmlns:viblendEditors="clr-namespace:VIBlend.WPF.Controls;assembly=VIBlend.WPF.Editors">
   <Grid>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="*"/>
@@ -12,13 +13,13 @@
       <RowDefinition Height="Auto"/>
     </Grid.RowDefinitions>
     <HeaderedContentControl Grid.Column="0" Grid.Row="0" Margin="2" Header="X">
-      <v:NumericUpDownView Value="{Binding Path=X, Mode=TwoWay}"/>
+      <viblendEditors:SpinEditor Value="{Binding Path=X, Mode=TwoWay}"/>
     </HeaderedContentControl>
     <HeaderedContentControl Grid.Column="1" Grid.Row="0" Margin="2" Header="Y">
-      <v:NumericUpDownView Value="{Binding Path=Y, Mode=TwoWay}"/>
+      <viblendEditors:SpinEditor Value="{Binding Path=Y, Mode=TwoWay}"/>
     </HeaderedContentControl>
     <HeaderedContentControl Grid.Column="2" Grid.Row="0" Margin="2" Header="Z">
-      <v:NumericUpDownView Value="{Binding Path=Z, Mode=TwoWay}"/>
+      <viblendEditors:SpinEditor Value="{Binding Path=Z, Mode=TwoWay}"/>
     </HeaderedContentControl>
   </Grid>
 </UserControl>
